Fixing text padding on narrow screens.

--- a/styles.less
+++ b/styles.less
@@ -60,11 +60,14 @@ header {
       box-shadow: 0 0 .25rem rgba(#000, .5);
       background-color: darken(#f20132, 10%);
     }
-    .title {
+    > span {
+      padding-right: 3rem;
+    }
+    > .title {
       font-size: 1.25rem;
       font-weight: 900;
     }
-    .description {
+    > .description {
       font-weight: 400;
     }
     svg, i {
